--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -17,6 +17,7 @@
 }
 .hero-content h2 {
   font-weight: 500;
+  margin-top: .5em;
 }
 .hero-content h1, .hero-content h2, .hero-content a {
   color: white;
