--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -12,6 +12,10 @@
   margin: 0 auto;
   text-align: center;
 }
+.hero-logo {
+  font-size: 5rem;
+  margin-top: 1.5em;
+}
 .hero-content h1 {
   font-size: 5rem;
 }
