--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -22,6 +22,7 @@
 .hero-content h2 {
   font-weight: 500;
   margin-top: .5em;
+  font-size: 2.75rem;
 }
 .hero-content h1, .hero-content h2, .hero-content a {
   color: white;
