slight adjustments for small screen
reduce hero header text and add some margin on the product listings

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -27,3 +27,8 @@
 .hero-content h1, .hero-content h2, .hero-content a {
   color: white;
 }
+@include media-query($small) {
+  .hero-content h2 {
+    font-size: 1.75rem;
+  }
+}
