reduce padding on hero on small screen
Since we increased the padding for large screens, we need to bring it
back to a reasonable number for smaller screens.

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -28,6 +28,10 @@
   color: white;
 }
 @include media-query($small) {
+  .hero-unit .hero-content {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
   .hero-content h2 {
     font-size: 1.75rem;
   }
