add link to 18F blog post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,10 +22,13 @@
 
   <div class="usa-footer-secondary_section">
     <div class="usa-grid">
-      <div class="usa-footer-logo">
+      <div class="usa-footer-logo usa-width-three-fourths">
         {% if site.footer.image %}
           <a href="http://www.acf.hhs.gov/acyf"><img class="usa-footer-slim-logo-img" src="{{site.footer.image | prepend: site.baseurl }}" alt="Administration for Children and Families Logo"></a>
         {% endif %}
+      </div>
+      <div class="usa-width-one-fourth">
+        <a class="footer-blog-link" href="https://18f.gsa.gov/2016/03/22/helping-california-buy-a-new-child-welfare-system/">Modular CMS Procurement</a>
       </div>
     </div>
   </div>
