--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,10 +3,15 @@
 }
 .usa-footer-slim-logo-img {
 	max-width: 30rem;
+	float: none;
 }
 .hhs-footer-img {
 	max-width: 4rem;
 	vertical-align: middle;
 	float: none;
 	margin-right: 1rem;
+}
+.footer-blog-link {
+	display: block;
+	margin-top: 0.5em;
 }
