remove outdated 18F Template materials

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,15 +51,11 @@ $small:            481px;
 @import
         "base",
         "buttons",
-        "header",
-        "footer",
-        "sidenav",
         "facets",
-        "home",
+        "footer",
+        "header",
         "hero",
+        "home",
         "product",
-        "iframe",
-        "pages",
-        "submit",
-        "projects"
+        "submit"
 ;
